# MAGnifyGlass

magnify/: CMakeLists.txt  magnifyglass.cpp  magnifyglass.h  magnifyglass.ui  main.cpp
